--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -1,4 +1,7 @@
-body {
-  margin: 0;
-  padding: 0;
-}
+/**
+ * Loading bootstrap (normalize & grids only)
+ */
+@import "~bootstrap/less/variables.less";
+@import "~bootstrap/less/mixins.less";
+@import "~bootstrap/less/normalize.less";
+@import "~bootstrap/less/grid.less";
