Bug fixes & component style fix

--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -1,5 +1,5 @@
 /**
- * Loading bootstrap (normalize & grids only)
+ * Loading bootstrap
  */
 @import "~bootstrap/less/variables.less";
 @import "~bootstrap/less/mixins.less";
