--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -1,7 +1,21 @@
 /**
  * Loading bootstrap
  */
+
+// Core variables and mixins
 @import "~bootstrap/less/variables.less";
 @import "~bootstrap/less/mixins.less";
+
+// Reset and dependencies
 @import "~bootstrap/less/normalize.less";
+@import "~bootstrap/less/print.less";
+
+
+// Core CSS
 @import "~bootstrap/less/grid.less";
+
+// Components
+
+// Utility classes
+@import "~bootstrap/less/utilities.less";
+@import "~bootstrap/less/responsive-utilities.less";
