Header/Navigation setup

--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -4,7 +4,10 @@
 
 // Core variables and mixins
 @import "~bootstrap/less/variables.less";
+@import "./variables";
 @import "~bootstrap/less/mixins.less";
+@import "~lesshat/build/lesshat-prefixed";
+@import "./mixins";
 
 // Reset and dependencies
 @import "~bootstrap/less/normalize.less";
