--- a/UI/components/Header/index.less
+++ b/UI/components/Header/index.less
@@ -1,7 +1,10 @@
-@import '~lesshat/build/lesshat';
+@import '~base/index';
 
 .header {
-  background-color: red;
+  padding: 1rem 0;
+  .iu-box-shadow();
   &-logo {
+    font-size: 1.2rem;
+    text-decoration: none;
   }
 }
