--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -12,12 +12,10 @@
 // Reset and dependencies
 @import "~bootstrap/less/normalize.less";
 @import "~bootstrap/less/print.less";
-
+@import "./global";
 
 // Core CSS
 @import "~bootstrap/less/grid.less";
-
-// Components
 
 // Utility classes
 @import "~bootstrap/less/utilities.less";
