--- a/UI/base/mixins.less
+++ b/UI/base/mixins.less
@@ -22,4 +22,15 @@
   }
 }
 
+/**
+ * 链接的通用样式
+ */
+.iu-link() {
+  color: @iu-link-color;
+  text-decoration: none;
+  &:hover {
+    color: darken(@iu-link-color, 30%);
+    text-decoration: none;
+  }
+}
 
