--- a/UI/components/Header/index.less
+++ b/UI/components/Header/index.less
@@ -1,10 +1,13 @@
 @import '~base/index';
 
 .header {
-  padding: 1rem 0;
+  height: 8rem;
+  line-height: 8rem;
+  vertical-align: middle;
   .iu-box-shadow();
+  
   &-logo {
-    font-size: 1.2rem;
+    font-size: 3rem;
     text-decoration: none;
   }
 }
