--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -3,20 +3,17 @@
  */
 
 // Core variables and mixins
-@import "~bootstrap/less/variables.less";
 @import "./variables";
-@import "~bootstrap/less/mixins.less";
-@import "~lesshat/build/lesshat-prefixed";
 @import "./mixins";
 
 // Reset and dependencies
-@import "~bootstrap/less/normalize.less";
-@import "~bootstrap/less/print.less";
+@import "~bootstrap/less/normalize";
+@import "~bootstrap/less/print";
 @import "./global";
 
 // Core CSS
-@import "~bootstrap/less/grid.less";
+@import "~bootstrap/less/grid";
 
 // Utility classes
-@import "~bootstrap/less/utilities.less";
-@import "~bootstrap/less/responsive-utilities.less";
+@import "~bootstrap/less/utilities";
+@import "~bootstrap/less/responsive-utilities";
