--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -17,3 +17,6 @@
 // Utility classes
 @import "~bootstrap/less/utilities";
 @import "~bootstrap/less/responsive-utilities";
+
+// Icon
+@import "./font-icon";
