--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -12,6 +12,9 @@
 @import "./global";
 
 // Core CSS
+@import "~bootstrap/less/scaffolding.less";
+@import "~bootstrap/less/type.less";
+@import "~bootstrap/less/code.less";
 @import "~bootstrap/less/grid";
 
 // Utility classes
