--- a/UI/base/variables.less
+++ b/UI/base/variables.less
@@ -2,4 +2,6 @@
 
 @iu-shadow-color: #E2E2E2;
 @iu-link-color: #5693CF;
+@in-link-hover-color: #f39c12;
 @iu-brand-primary: #2C3E50;
+@iu-font-primary: #b5c2d0;
