--- a/UI/pages/home/index.less
+++ b/UI/pages/home/index.less
@@ -1,3 +1,14 @@
 body {
-  background-color: red;
+  font-family: "SimHei", Helvetica, arial, sans-serif;
+  background-color: #f4f4f4;
 }
+
+a {
+  color: #5693cf;
+  text-decoration: none;
+}
+  /*States*/
+  a:hover {
+    color: #f39c12;
+    text-decoration: none;
+  }
