--- a/UI/base/font-icon.less
+++ b/UI/base/font-icon.less
@@ -6,3 +6,7 @@
   url('//at.alicdn.com/t/font_1428469603_916043.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
   url('//at.alicdn.com/t/font_1428469603_916043.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
+
+.iconfont {
+  font-family: 'iconfont';
+}
