--- a/UI/components/Header/index.less
+++ b/UI/components/Header/index.less
@@ -1,23 +1,29 @@
 @import '~base/mixins';
 
 .header {
+  @mod-height: 6rem;
+  
+  .iu-box-shadow();
   background-color: #fff;
-  height: 6rem;
-  line-height: 6rem;
+  height: @mod-height;
+  line-height: @mod-height;
   vertical-align: middle;
   margin-bottom: 2rem;
-  .iu-box-shadow();
   
   &-logo {
-    font-size: 3rem;
+    font-size: 2rem;
     text-decoration: none;
   }
 
+  &-submod-wrap {
+    height: @mod-height;
+    line-height: @mod-height;
+  }
+
   &-button {
-    text-decoration: none;
     .iu-button();
-    &-pencil {
-      font-family: 'iconfont'; 
-    }
+    text-decoration: none;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
