--- a/UI/components/CardPanel/index.less
+++ b/UI/components/CardPanel/index.less
@@ -6,8 +6,11 @@
   	border: 1px solid transparent;
   	color: #b5c2d0;
   	font-size: 1.6rem;
-  	padding: 2rem;
+  	padding: 1.5rem;
   	.iu-box-shadow-interactive();
+  	&-head {
+  		padding-top: 0.2rem;
+  	}
 	&-body {
 		padding: 0.8rem;
 	}
@@ -21,8 +24,8 @@
 		float: right;
 	}
 
-	&-content {
-		padding: 1.2rem, 0;
+	&-content-p {
+		margin: 1.2rem, 0;
 		font-size: 1.7rem;
 		color: #000;
 	}
