--- a/UI/base/mixins.less
+++ b/UI/base/mixins.less
@@ -10,6 +10,21 @@
  */
 
 
+body {
+  font-family: "SimHei", Helvetica, arial, sans-serif;
+  background-color: #f4f4f4;
+}
+
+a {
+  color: #5693cf;
+  text-decoration: none;
+}
+  /*States*/
+  a:hover {
+    color: #f39c12;
+    text-decoration: none;
+  }
+
 /**
  * 常用卡片的阴影（鼠标悬停不可取消）
  */
