--- a/UI/pages/login/SessionMain/index.less
+++ b/UI/pages/login/SessionMain/index.less
@@ -1,6 +1,12 @@
+@import '~base/mixins';
+
 .login-head {
+  background-color: #3498db;
   color: #ecf0f1;
   padding: 30px;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .login-head a {
@@ -18,27 +24,6 @@
 
 .intoduction p {
   font-size: 15px;
-}
-
-.login-tab {
-  margin-top: 24px;
-}
-
-.login-tab a {
-  font-size: 18px;
-}
-
-.tab-content {
-  width: 60%;
-  margin-top: 20px;
-}
-
-.form-control, .checkbox, .button_confirm, .forget_pswd {
-  margin:16px;
-}
-
-.agreements {
-  margin: 0;
 }
 
 .long-story {
