--- a/UI/components/Cardflow/index.less
+++ b/UI/components/Cardflow/index.less
@@ -2,6 +2,10 @@
 
 @import '~base/mixins';
 
+.cardflow {
+  margin-top: 2rem;
+}
+
 .selfcard {
   .iu-box-shadow-interactive();
   margin-bottom: 2rem;
