--- a/UI/components/Header/index.less
+++ b/UI/components/Header/index.less
@@ -8,6 +8,7 @@
   height: @mod-height;
   line-height: @mod-height;
   vertical-align: middle;
+  margin-bottom: 2rem;
   
   &-logo {
     font-size: 2rem;
