--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -12,10 +12,12 @@
 @import "./global";
 
 // Core CSS
-@import "~bootstrap/less/scaffolding.less";
-@import "~bootstrap/less/type.less";
-@import "~bootstrap/less/code.less";
+@import "~bootstrap/less/scaffolding";
+@import "~bootstrap/less/type";
+@import "~bootstrap/less/code";
 @import "~bootstrap/less/grid";
+@import "~bootstrap/less/forms";
+
 
 // Utility classes
 @import "~bootstrap/less/utilities";
