global component - button

--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -18,6 +18,8 @@
 @import "~bootstrap/less/grid";
 @import "~bootstrap/less/forms";
 
+// Shared components
+@import "modules/button";
 
 // Utility classes
 @import "~bootstrap/less/utilities";
