--- a/UI/components/Pagination/index.less
+++ b/UI/components/Pagination/index.less
@@ -39,7 +39,7 @@
   }
   
   li>a:hover, li>span:hover {
-    cursor: default;
+    cursor: pointer;
     background-color: mix(@iu-brand-primary, white, 10%);
   }
 }
