use bootstrap nav

--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -19,6 +19,7 @@
 @import "~bootstrap/less/forms";
 
 // Shared components
+@import "~bootstrap/less/navs.less";
 @import "modules/button";
 
 // Utility classes
