--- a/UI/base/index.less
+++ b/UI/base/index.less
@@ -21,6 +21,7 @@
 // Shared components
 @import "~bootstrap/less/navs.less";
 @import "modules/button";
+@import "modules/loading";
 
 // Utility classes
 @import "~bootstrap/less/utilities";
