--- a/UI/pages/questions-show/CommentList/index.less
+++ b/UI/pages/questions-show/CommentList/index.less
@@ -4,6 +4,10 @@
 	padding:18px 0 18px 0;
 }
 
+.answer-action,
+.answer-action:hover {
+	text-decoration: none;
+}
 .answer-status {
 	text-align: center;
 	color: @iu-link-color;
@@ -27,4 +31,8 @@
 
 .answer-share-link {
 	padding-top: 20px;
+}
+
+.answer-inner {
+	height: 22px;
 }
