再也不用jiathis了。。

--- a/UI/pages/questions-show/SessionMain/index.less
+++ b/UI/pages/questions-show/SessionMain/index.less
@@ -21,6 +21,19 @@
 .question-react {
 	margin-left: 12px;
 	float: right;
+  position: relative;
+  display: inline-block;
+}
+
+.question-share {
+  position: absolute;
+  bottom: -45px;
+  right: 0;
+  width: 250px;
+  background-color: white;
+  border: 1px solid gray;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .share-img, .answer-img {
